# dive

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md
dive/: Viz_UI.py  csv_tocolors.py  helper.py  loading.py  main.py  mask.py  showman.py  tract.py
example/: Readm.md  Readme.md  UF_R.trx  recogmethod-AFQ_tractography.trx  stat_template.csv
